load("@rules_hdl//verilog:providers.bzl" , "verilog_library")
load("@corearchcoverage//:archcov.bzl", "archcov_gen")

archcov_gen(
  name = "archcov",
  #whisper_config = "@risc-p-cores//dv/core/testlists:whisper_config.json",
  whisper_config = "@corearchcoverage//tests:whisper_config.json",
  standalone = False,
  visibility = ["//visibility:public"],
)

cc_library(
    name = "archsample_dpi",
    srcs = ["arch_sample.cpp"],
    deps = [
         ":archcov_sample_interface",
         "//common:common",
         "@corearchcoverage//arch/sample:archsample",
         "@corearchcoverage//arch/common:points",
         "@cvm//:plusargs",
    ],
    alwayslink = True,
    strip_include_prefix = ".",
    visibility = ["//visibility:public"],
)
