cc_library(
    name     = "whisper_if",
    hdrs     = [
        "whisper_client.h",
        "iss_utils.h",
    ],
    srcs     = [
        "whisper_client.cpp",
    ],
    deps     = [
        "//common:common",
        "@whisper//:rvcore",
        "//sysmod:sysmod_plusargs",
        "//cosim/dut_if/rvfi:rvfi_plusargs",
        "//cosim/bridge:bridge_plusargs",
        "//cosim/utils/eot:eot_plusargs",
        "//cosim/utils/general:util",
        "@rv_tester//cosim/whisper_if:whisper_decoder",
        "//:plusargs",
        "//:structs",
        "@cvm//:registry",
        "@cvm//:messenger",
    ],
    alwayslink = True,
    linkopts = ["-lrt", "-lboost_program_options"],
    visibility = ["//visibility:public"],
    strip_include_prefix = ".",
    local_defines = ["LZ4_COMPRESS"],
)

cc_library(
    name     = "whisper_decoder",
    hdrs     = [
        "whisper_decoder.h",
    ],
    srcs     = [
        "whisper_decoder.cpp",
    ],
    deps     = [
        "//common:common",
        "@whisper//:rvcore",
    ],
    alwayslink = True,
    linkopts = ["-lrt"],
    visibility = ["//visibility:public"],
    strip_include_prefix = ".",
)
