
load("//infra/container:container.bzl", "CONTAINER_IMAGE")

platform(
    name = "host_platform",
    parents = ["@local_config_platform//:host"],
    exec_properties = {
        'container-image': CONTAINER_IMAGE,
    },
    host_platform = True,
)

platform(
    name = "target_platform",
    parents = ["@local_config_platform//:host"],
    exec_properties = {
        'container-image': CONTAINER_IMAGE,
    },
    target_platform = True,
)
