# config package, contains core / repo specific files and targets to run bzsim

load("@runtime//:runtime.bzl", "runtime_library")
load("@bzsim//:sim.bzl", "sim_target")

runtime_library(
    name = "ariane_runtime",
    simtest_data = [
        "@whisper//:whisper",
        "@cva6-wrapper//:ariane_whisper_json",
        "@cva6-wrapper//:ariane_memmap_json"
    ],
    plusargs_paths = {
        "whisper_path"      : "whisper/whisper",
        "whisper_json_path" : "cva6-wrapper/whisper.json",
        "memmap_json_path"  : "cva6-wrapper/memmap.json"
    },
    visibility = ["//visibility:public"],
)

py_library(
    name = "chips_bzsimconfig",
    srcs = ["bzsimconfig.py"],
    visibility = ["//visibility:public"],
)
