# config package, contains core / repo specific files and targets to run bzsim

load("@bzsim//runtime:runtime.bzl", "runtime_library")
load("@bzsim//:sim.bzl", "sim_target")

runtime_library(
    name = "runtime",
    simtest_data = [
        "@whisper//:whisper",
        "//test/sw_testbench:whisper_json",
        "//test/sw_testbench:memmap_json"
    ],
    plusargs_paths = {
        "whisper_path"      : "whisper/whisper",
        "whisper_json_path" : "rv_tester/test/sw_testbench/whisper.json",
        "memmap_json_path"  : "rv_tester/test/sw_testbench/memmap.json"
    },
    visibility = ["//visibility:public"],
)

py_library(
    name = "bzsimconfig",
    srcs = ["bzsimconfig.py"],
    visibility = ["//visibility:public"],
)
