load("@rv_tester_pypi//:requirements.bzl", "requirement")
load(":csr_param_gen.bzl", "csr_param_gen")

py_binary(
    name = "csr_param_gen",
    srcs = ["csr_param_gen.py"],
    deps = [
        requirement("pyyaml"),
        requirement("bitstring"),
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "csr_spec",
    srcs = ["csr_spec.yaml"],
    visibility = ["//visibility:public"],
)