cc_library(
    name = "aclint",
    srcs = ["aclint.cpp"],
    hdrs = ["aclint.h"],
    deps = [
      "//sysmod:device",
      "//sysmod/clint:clint",
      "@cvm//:registry",
      "@cvm//:plusargs",
      "@cvm//:logger",
    ] + select({
        "//:use_bzlmod": ["@boost.algorithm"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)
