cc_library(
    name = "aplic_mmr",
    srcs = ["aplic_mmr.cpp"],
    hdrs = ["@rv_tester//transactors/axi_sw:safe_queue.h",
            "@rv_tester//transactors/axi_sw:axi.h",
            "aplic_mmr.h",
            ],
    deps = [
        "//sysmod:device",
        "@mem_manager//:mem_manager",
        "@rv_tester//common:common",
        "@cvm//:plusargs",
        "@cvm//:registry",
        "@cvm//:bitmanip",
        "@cvm//:topology",
    ],
    visibility = ["//visibility:public"],
)
