cc_library(
    name = "cla_cfg",
    srcs = ["cla_cfg.cpp"],
    hdrs = ["@rv_tester//transactors/axi_sw:safe_queue.h",
            "@rv_tester//transactors/axi_sw:axi.h",
            "cla_cfg.h",
            "cla_defines.h",
            ],
    deps = [
        "//sysmod:device",
        "@mem_manager//:mem_manager",
        "@rv_tester//common:common",
        "@cvm//:plusargs",
        "@cvm//:registry",
        "@cvm//:bitmanip",
        "@cvm//:topology",
    ],
    visibility = ["//visibility:public"],
)

# cc_library(
#     name = "pll_xtor",
#     srcs = ["pll_xtor.cpp"],
#     hdrs = ["@rv_tester//transactors/axi_sw:safe_queue.h",
#             "@rv_tester//transactors/axi_sw:axi.h",
#             "pll_xtor.h",
#             "pll_xtor_defines.h",
#             ],
#     deps = [
#         "//sysmod:device",
#         "@mem_manager//:mem_manager",
#         "@rv_tester//common:common",
#         "@cvm//:plusargs",
#         "@cvm//:registry",
#         "@cvm//:bitmanip",
#         "@cvm//:topology",
#         "//sysmod/trickbox:trickbox",
#     ],
#     visibility = ["//visibility:public"],
# )
