cc_library(
    name = "clint",
    srcs = ["clint.cpp"],
    hdrs = ["clint.h"],
    deps = [
      "//sysmod:device",
      "@cvm//:registry",
      "@cvm//:plusargs",
      "@cvm//:logger",
    ] + select({
        "//:use_bzlmod": ["@boost.algorithm"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)
